--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./index.css"/>
 </head>
 <body>
-    <button style="margin: 2px; background-color: blue; width: 50px;height: 30px;" onclick="remove(),start()">
+    <div class="mark"></div>
+    <button class="button"  onclick="remove(),start()">
         Start</button>
     <div id="app">
        
